# FinOpsGuard

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml
Diseño/: diseño.md
docs/: DEPLOY_CLIENT_PRODUCTION.md  DEPLOY_LAMBDA_PROD.md  POC_DOCKER.md
finopsguard/: __init__.py  env.py  graph.py  models.py
finopsguard/prompts/: action.txt  insight.txt
finopsguard/tools/: notify_teams.py
prod/lambda/: handler.py  template.yaml
scripts/: run_weekly.py
tests/: test_anomaly_node.py  test_notify_teams.py
